<resources>
    <string name="app_name">采样平台</string>
    <string name="app_versionName">采样平台V%1$s</string>
    <string name="action_settings">Settings</string>
    <string name="info_MANU_COMPANY">(标称)生产者信息</string>
    <string name="info_DRAW">抽样单位信息</string>
    <string name="info_SUPPLIER">被抽样单位信息</string>
    <string name="info_sample">样品信息</string>
    <string name="info_third">(标称)第三方企业信息</string>
    <string name="details">详细情况</string>
    <string name="prov_submit">暂存</string>
    <string name="submit">提交</string>
    <string name="upload_img">上传图片</string>
    <string name="SamplingBill">抽样单</string>
    <string name="SamplingBill2">抽样单(无市场)</string>
    <string name="SamplingFeedback">反馈单</string>
    <string name="Notification">告知书</string>
    <string name="selectImg">选择图片</string>
    <string name="refresh">刷新</string>
    <string name="payment">付款凭证</string>
    <string name="sampleTag">样品标签</string>
    <string name="select_title">付款凭证</string>
    <string name="select_have">已选择</string>
    <string name="select_num">%1$s</string>
    <string name="select_invert">反选</string>
    <string name="select_all">全选</string>
    <string name="select_confirm">确认</string>
    <string name="select_cancel">取消</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="remember_password">记住密码</string>
    <string name="btn_login">登录</string>
    <string name="welcome_speech">欢迎使用本平台</string>
    <string name="TasksList">任务列表</string>
    <string name="NoTask">没有任务</string>
    <string name="Tips">采样信息审核退回:红色;样品审核退回:橙色;基础信息审核退回:蓝色;</string>
    <string name="update_title">检测到新版本V%1$s</string>
    <string name="update_content">更新内容</string>
    <string name="update_btn">马上升级</string>
    <string name="img_type_1">现场照片</string>
    <string name="img_type_2">签名</string>
    <string name="img_type_3">告知书&amp;抽样单</string>
    <!--<string name="img_type_0">签名</string>
    <string name="img_type_1">样品照片</string>
    <string name="img_type_2">现场照片</string>
    <string name="img_type_3">营业执照</string>
    <string name="img_type_4">经营许可证</string>
    <string name="img_type_5">告知书</string>
    <string name="img_type_6">反馈单</string>
    <string name="img_type_7">抽样单</string>
    <string name="img_type_8">微信截图</string>
    <string name="Image">已经上传的图片</string>-->
    <string name="btn_upload_img">上传图片</string>
    <string name="about">关于</string>
    <string name="user_name">%1$s</string>
    <string name="unit_name">宁波市食品检验检测研究院</string>
    <string name="settings">设置</string>
    <string name="change_account">切换账号</string>
    <string name="task_query">任务查询</string>
    <string name="share">分享</string>
    <string name="feedback">反馈</string>
    <string name="more">更多</string>
    <string name="select_date">请选择日期</string>
    <!--<string name="supplier_addr">%1$s%2$s%3$s%4$s%5$s</string>
    <string name="manu_company_addr">%1$s%2$s%3$s%4$s%5$s</string>-->
    <string name="supplier_addr">%1$s</string>
    <string name="manu_company_addr">%1$s</string>
    <string name="img_desc">Image Description</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="signature_clear">清除</string>
    <string name="signature_save">保存</string>
    <string name="title_activity_signature">SignatureActivity</string>
    <string name="imei_type">IMEI/MAC</string>

</resources>
