<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.DetailsActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_prov_submit"
        android:orderInCategory="100"
        android:title="@string/prov_submit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_submit"
        android:orderInCategory="100"
        android:title="@string/submit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_uploadImg"
        android:orderInCategory="100"
        android:title="@string/upload_img"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_SamplingBill"
        android:orderInCategory="100"
        android:title="@string/SamplingBill"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_SamplingBill2"
        android:orderInCategory="100"
        android:title="@string/SamplingBill2"
        app:showAsAction="never" />

</menu>