<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.TestActivity">

    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:title="@string/select_cancel"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_payment"
        android:orderInCategory="100"
        android:title="@string/payment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sampletag"
        android:orderInCategory="100"
        android:title="@string/sampletag"
        app:showAsAction="never" />

</menu>